--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   background-color: #f2f2f2;
 }
 
-a {
+.container a {
   text-decoration: none;
   color: #000000;
 }
@@ -17,23 +17,22 @@ a {
 .container { 
   width: 1200px;
   margin: 0 auto;
-  box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
   -webkit-box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);  
   text-align: center;
   background-color: #ffffff;
 }
 
-section {	    
+.container section {	    
   width: 1200px;
 }
 
 .header {
   max-width: 1200px;
   position: relative;
-  display: flex;
   display: -webkit-box;
-  display: -moz-box;
   display: -ms-flexbox;
+  display: flex;
   background-color: #ffffff;
   z-index: 1;
 }
@@ -52,10 +51,9 @@ section {
 
 .header-nav-list {
   margin: 15px 0 12px 0;
-  padding: 0;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
+  padding: 0;  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;
   list-style: none;
 }
@@ -69,8 +67,7 @@ section {
   cursor: pointer;
 }
 
-.header-nav-href:hover,
-.header-nav-href:focus {
+.header-nav-href:hover {
   color: #81b3d2;
   outline: none;
 }
@@ -105,7 +102,7 @@ section {
 
 .welcome-block {
   position: relative; 
-  background-color: #ffffff;
+  background-color: #2d4349;
   background-image: url('../img/background.jpg');
   background-repeat: no-repeat;
   background-position: 0 -58px; 
@@ -136,27 +133,30 @@ section {
   background-color: #ffffff;
 }
 
-.features-text {
-  width: 1200px;
-  padding: 50px 0;
-  text-align: center;
-}
-
 .features-text h2 {
+  width: 576px;
   margin-top: 11px;
-  margin-bottom: 27px;
+  margin-bottom: 27px; 
+  margin-left: 312px;
+  margin-right: 312px;  
 }
 
 .features-text p {
+  font-weight: normal;
   line-height: 26px;
-  margin-bottom: 0px;
+  margin-bottom: 0px;  
+}
+
+.features-text {
+  width: 1200px;
+  padding: 50px 0;
+  text-align: center;  
 }
 
 .advantages {
-  display: flex;
   display: -webkit-box;
-  display: -moz-box;
   display: -ms-flexbox;
+  display: flex;
   width: 1200px;
 }
 
@@ -164,11 +164,32 @@ section {
   width: 400px;
   min-height: 256px;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;  
-  flex-direction: column; 
-  justify-content: center; 
+  -webkit-box-orient: vertical;  
+  -webkit-box-direction: normal;  
+      -ms-flex-direction: column;  
+          flex-direction: column; 
+  -webkit-box-pack: center; 
+      -ms-flex-pack: center; 
+          justify-content: center; 
   color: #ffffff;
   background-color: #81b3d2;
+}
+
+.advantages-item p {
+	font-weight: normal;
+}
+
+.advantages-item:nth-child(1) p {
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.advantages-item:nth-child(2) p {
+  margin-left: 48px;
+  margin-right: 48px;
 }
 
 .advantages-picture {
@@ -178,21 +199,30 @@ section {
 }
 
 .advantages-block {
-  display: flex;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: flex;
   width: 1200px;
 }
 
 .advantages-block-item {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 400px;
   padding-top: 60px;
   padding-bottom: 67px;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; 
-  flex-direction: column;  
-  justify-content: center;  
+  -webkit-box-orient: vertical; 
+  -webkit-box-direction: normal; 
+      -ms-flex-direction: column; 
+          flex-direction: column;  
+  -webkit-box-pack: center;  
+      -ms-flex-pack: center;  
+          justify-content: center;  
 }
 
 .advantages-block-item:nth-child(1) .advantages-block-picture {
@@ -224,9 +254,43 @@ section {
   margin-bottom: 10px;
 }
 
+.advantages-block-item:nth-child(1) p {
+  margin-left: 73px;
+  margin-right: 73px;
+}
+
+.advantages-block-item:nth-child(2) p {
+  margin-left: 57px;
+  margin-right: 57px;
+}
+
+.advantages-block-item:nth-child(3) p {
+  margin-left: 63px;
+  margin-right: 63px;
+}
+
 .advantages-num {
   background-color: #eeeeee;
 }
+
+.advantages-block-item p {
+  font-weight: normal;
+}
+
+.advantages-num:nth-child(1) p {
+  margin-left: 95px;
+  margin-right: 95px;
+} 
+
+.advantages-num:nth-child(2) p {
+  margin-left: 68px;
+  margin-right: 68px;
+} 
+
+.advantages-num:nth-child(3) p {
+  margin-left: 77px;
+  margin-right: 77px;
+} 
 
 .hotels {
   text-align: center;
@@ -239,12 +303,13 @@ section {
   margin-top: 58px;	
 }
 
-h2 {
+.container h2 {
   font-size: 21px;
   line-height: 26px;
 }
 
 .hotels-sentence {
+  font-weight: normal;
   margin-bottom: 48px;
   line-height: 24px;
 }
@@ -252,8 +317,8 @@ h2 {
 .search-hotel-button-wrapper {
   position: relative;
   margin: 50px auto auto;
-  box-sizing: border-box;
   -webkit-box-sizing: border-box;
+          box-sizing: border-box;  
   width: 571px;
   min-height: 84px;
   background-color: #766357;
@@ -288,8 +353,8 @@ h2 {
 .chose-date {
   font: inherit;
   text-transform: uppercase;  
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box;  
+          box-sizing: border-box; 
   width: 345px;  
   min-height: 38px;
   margin: 0;
@@ -321,13 +386,15 @@ h2 {
 
 .chose-date:focus,
 .chose-number:focus {
-  background-color: #ffffff;
-  -webkit-box-shadow: inset 0 0 0 2px #e5e5e5;  
-  box-shadow: inset 0 0 0 2px #e5e5e5;
+  background-color: #ffffff;    
+  -webkit-box-shadow: inset 0 0 0 2px #e5e5e5;    
+          box-shadow: inset 0 0 0 2px #e5e5e5;
   outline: 0;
 }
 
 .chose-wrapper { 
+  display: -webkit-box; 
+  display: -ms-flexbox; 
   display: flex;
  
 }
@@ -348,8 +415,7 @@ h2 {
   fill: #cacaca;
 }
 
-.calendar-icon:hover,
-.calendar-icon:focus {
+.calendar-icon:hover {
   fill: #000000;
   outline: none;
 }
@@ -391,19 +457,24 @@ h2 {
 
 .search-hotel-popup {
   text-align: start; 
+  display: -webkit-box; 
+  display: -ms-flexbox; 
   display: flex; 
   padding-left: 55px;
   padding-right: 55px;
   background-color: #ffffff;
-  flex-direction: column;  
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;  
   z-index: 2; 
-  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
-   -webkit-box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
+  -webkit-box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15); 
+          box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);  
 }
 
-.search-hotel-popup-wrapper.show {
-  -webkit-animation: popupshow 0.6s forwards;
-  animation: popupshow 0.6s forwards;
+.search-hotel-popup-wrapper.show {  
+  -webkit-animation: popupshow 0.6s forwards;  
+          animation: popupshow 0.6s forwards;
   z-index: 2;
 }
 
@@ -438,11 +509,14 @@ h2 {
 }
 
 .search-hotel-popup label {  
-  align-self: center;  
+  -ms-flex-item-align: center;  
+      -ms-grid-row-align: center;  
+      align-self: center;  
   text-align: left;
   line-height: 21px;
   width: 115px;  
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;  
+          box-sizing: border-box;
   padding-left: 3px;
 }
 
@@ -504,14 +578,12 @@ h2 {
 .plus:focus,
 .minus:focus {
   outline: none;
+  
 }
 
 .plus:hover::after,
 .plus:hover::before,
-.minus:hover::before,
-.plus:focus::after,
-.plus:focus::before,
-.minus:focus::before {
+.minus:hover::before {
   background-color: #000000;
   outline: none;
 }
@@ -524,10 +596,14 @@ h2 {
 
 .chose-people-wrapper {
   margin-top: 30px; 
+  display: -webkit-box; 
+  display: -ms-flexbox; 
   display: flex;
 }
 
 .chose-number-wrapper {  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;
   position: relative;
 }
@@ -535,7 +611,8 @@ h2 {
 .people {  
   padding-top: 14px;
   padding-bottom: 14px;  
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;  
+          box-sizing: border-box;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -572,7 +649,8 @@ h2 {
 }
 
 .chose-people-wrapper label:nth-of-type(2) {  
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;  
+          box-sizing: border-box;
   
   text-align: end;
   text-align: right;
@@ -591,28 +669,27 @@ h2 {
   z-index:2;
 }
 
-footer {
+.main-footer {
   background-color: rgba(255, 255, 255, 0.5);
   z-index:2;
 }
 .main-footer .container-footer {
-  display: flex;
   display: -webkit-box;
   display: -ms-flexbox;
-  justify-content: space-between;
+  display: flex;
   -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 37px 0;
-  align-items: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
+      -ms-flex-align: center;
+          align-items: center;  
 }
 
 .a-tag {
-  box-sizing: border-box;
   -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  
   width: 240px;
   text-align: center;
   margin-left: 73px;
@@ -631,17 +708,20 @@ footer {
 }
 
 .footer-social {
-  display: flex;
   display: -webkit-box;
   display: -ms-flexbox;
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
+  display: flex;
+
   -ms-flex-wrap: wrap;
-  justify-content: space-between;
+
+      flex-wrap: wrap;
+  
   -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;  
+  
+      -ms-flex-pack: justify;
+  
+          justify-content: space-between;
+    
   list-style: none;
   text-align: center;
   width: 150px;
@@ -654,9 +734,15 @@ footer {
 }
 
 .social-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;    
-  align-items: center;
-  justify-content: center; 
+  -webkit-box-align: center;    
+      -ms-flex-align: center;    
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; 
   width: 46px;
   height: 48px;
   background-color: #81b3d2;   
@@ -678,8 +764,9 @@ footer {
   width: 240px;
   margin: 0;
   margin-left: auto;
-  box-sizing: border-box;
   -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+ 
   text-align: center;
   margin-right: 73px;
   margin-left: 88px;
@@ -687,6 +774,7 @@ footer {
 
 .footer-copyright span {
   padding-right: 8px;
+  font-weight: normal;
 }
 
 .htmlacademy {
@@ -694,8 +782,7 @@ footer {
   fill: #000000;
 }
 
-.htmlacademy:hover,
-.htmlacademy:focus {
+.htmlacademy:hover {
   fill: #81b3d2;
   outline: none;
 }
@@ -706,7 +793,7 @@ footer {
 
 /* внутреняя страница */
 
-.site-navigation-current a {
+.header-nav-item .active {
   color: #766357;
 }
 
@@ -716,10 +803,11 @@ footer {
 }
 
 .filters {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   min-height: 215px;
   color: #ffffff;
-  background-color: #888888;
+  background-color: #2d4349;
   background-image: url(../img/filter_background.jpg);
   background-repeat: no-repeat;
   background-position: center;	
@@ -728,8 +816,11 @@ footer {
 .left-column {
   margin-left: 72px;
   padding-bottom: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; 
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap; 
+      flex-wrap: wrap;
 }
 
 .left-column fieldset {
@@ -768,7 +859,9 @@ footer {
   width: 2px;
   height: 22px;
   background: #ffffff;    
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);    
+      -ms-transform: translate(-50%, -50%);    
+          transform: translate(-50%, -50%);
 }
 
 .price-controls label {
@@ -834,12 +927,15 @@ footer {
   background: #ababab;
   border: 8px solid #ffffff;
   border-radius: 50%;   
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);   
+          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
 .range-toggle:hover {    
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);    
+      -ms-transform: scale(1.2);    
+          transform: scale(1.2);
 }
 
 .range-toggle-min {
@@ -851,9 +947,14 @@ footer {
 }
 
 .filter-form {  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   color: #fff;
   line-height: 21px;
 }
@@ -868,14 +969,20 @@ footer {
   margin-left: 117px;
 }
 
-fieldset {    
+.filter-form fieldset {    
+  display: -webkit-box;    
+  display: -ms-flexbox;    
   display: flex;    
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;    
+      flex-wrap: wrap;
   border: none;   
-  flex-direction: column;
+  -webkit-box-orient: vertical;   
+  -webkit-box-direction: normal;   
+      -ms-flex-direction: column;   
+          flex-direction: column;
 }
 
-legend {
+.filter-form legend {
   margin: 0;
   padding-top: 26px;
   padding-bottom: 26px;
@@ -888,17 +995,27 @@ legend {
   padding: 0;
   padding-left: 30px;
   padding-bottom: 24px;  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;    
-  flex-direction: row;      
-  justify-content: flex-start;    
-  align-items: center;
+  -webkit-box-orient: horizontal;    
+  -webkit-box-direction: normal;    
+      -ms-flex-direction: row;    
+          flex-direction: row;      
+  -webkit-box-pack: start;      
+      -ms-flex-pack: start;      
+          justify-content: flex-start;    
+  -webkit-box-align: center;    
+      -ms-flex-align: center;    
+          align-items: center;
 }
 
 .checkbox-list label {
   position: relative;
   padding-left: 10px;
   display: block;
-  cursor: pointer;        
+  cursor: pointer;
+  font-weight: normal;  
 }
 
 .checkbox-list.house label {
@@ -953,9 +1070,16 @@ legend {
   margin: 0;
   margin-right: 75px;
   padding: 0;    
+  display: -webkit-box;    
+  display: -ms-flexbox;    
   display: flex;   
-  justify-content: center;       
-  flex-direction: column;
+  -webkit-box-pack: center;   
+      -ms-flex-pack: center;   
+          justify-content: center;       
+  -webkit-box-orient: vertical;       
+  -webkit-box-direction: normal;       
+      -ms-flex-direction: column;       
+          flex-direction: column;
 }
 
 .show-button {
@@ -978,13 +1102,18 @@ legend {
 }
 
 .sorting{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 1200px;
-  align-items: baseline;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   background: #fefefe;
   border-bottom: 1px solid #e5e5e5;
   padding: 29px 73px 30px 73px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .sorting h2 {
@@ -998,10 +1127,18 @@ legend {
 .sorting-type{
   width: 856px;
   font-size: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
+.sorting-type span {
+  font-weight: normal;
+}
+
 .sorting-type ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
   margin: 0;	
@@ -1012,6 +1149,7 @@ legend {
 }
 
 .sorting-list a {
+  font-weight: normal;
   text-decoration: none;
   color: #dadada;
   border-bottom: 1px dotted #81b3d2;
@@ -1039,8 +1177,12 @@ legend {
 }
 
 .sorting-order-buttons {  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;   
-  align-items: center;
+  -webkit-box-align: center;   
+      -ms-flex-align: center;   
+          align-items: center;
 }
 
 .sorting-order-buttons polygon {
@@ -1087,8 +1229,13 @@ legend {
 .catalog-list {
   padding: 0;
   margin: 0;    
+  display: -webkit-box;    
+  display: -ms-flexbox;    
   display: flex;    
-  flex-direction: column;
+  -webkit-box-orient: vertical;    
+  -webkit-box-direction: normal;    
+      -ms-flex-direction: column;    
+          flex-direction: column;
   list-style: none;
 }
 
@@ -1096,18 +1243,31 @@ legend {
   padding: 0;
   margin: 0;
   min-height: 150px;   
+  display: -webkit-box;   
+  display: -ms-flexbox;   
   display: flex;  
-  justify-content: flex-start;    
-  align-items: center;
+  -webkit-box-pack: start;  
+      -ms-flex-pack: start;  
+          justify-content: flex-start;    
+  -webkit-box-align: center;    
+      -ms-flex-align: center;    
+          align-items: center;
   border-bottom: 1px solid #e5e5e5;
 }
 
 .item-wrapper {
   min-height: 100px;  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;  
-  flex-direction: column;
+  -webkit-box-orient: vertical;  
+  -webkit-box-direction: normal;  
+      -ms-flex-direction: column;  
+          flex-direction: column;
   margin-right: auto;    
-  align-items: stretch;  
+  -webkit-box-align: stretch;    
+      -ms-flex-align: stretch;    
+          align-items: stretch;  
 }
 
 .catalog-item img {
@@ -1136,8 +1296,12 @@ legend {
 }
 
 .catalog-info {   
+  display: -webkit-box;   
+  display: -ms-flexbox;   
   display: flex;   
-  justify-content: space-between;
+  -webkit-box-pack: justify;   
+      -ms-flex-pack: justify;   
+          justify-content: space-between;
   text-align: left;
 }
 
@@ -1145,6 +1309,7 @@ legend {
 .catalog-price {
   line-height: 21px;
   margin-bottom: 16px;
+  font-weight: normal;
 }
 
 .catalog-type {
@@ -1159,9 +1324,20 @@ legend {
 .catalog-score {
   margin-right: 73px;
   height: 90px;  
+  display: -webkit-box;  
+  display: -ms-flexbox;  
   display: flex;    
-  flex-direction: column;   
-  justify-content: space-between;
+  -webkit-box-orient: vertical;    
+  -webkit-box-direction: normal;    
+      -ms-flex-direction: column;    
+          flex-direction: column;   
+  -webkit-box-pack: justify;   
+      -ms-flex-pack: justify;   
+          justify-content: space-between;
+}
+
+.catalog-score span {
+  font-weight: normal;
 }
 
 .catalog-rating {
@@ -1211,8 +1387,12 @@ legend {
 }
 
 .catalog-stars {   
+  display: -webkit-box;   
+  display: -ms-flexbox;   
   display: flex;   
-  justify-content: flex-end;
+  -webkit-box-pack: end;   
+      -ms-flex-pack: end;   
+          justify-content: flex-end;
 }
 
 .catalog-stars img {
