Исправления классов двух верхних секций главной

--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,10 @@
 .header {
-  max-width: 1200px;
+  font-weight: 700;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background-color: #ffffff;
-  z-index: 1;
 }
 
 .header__logo-link {
