--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ a {
   color: #000000;
 }
 
+.visually-hidden {
+  display: none;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -25,7 +29,7 @@ a {
   background-color: #ffffff;
 }
 
-.container h2 {
+h2 {
   font-size: 21px;
   line-height: 26px;
 }
@@ -36,362 +40,17 @@ a {
   display: flex;
 }
 
-.hotels {
-  text-align: center;
-  background-color: #ffffff;
-}
-
-.hotels h2 {
-  font-size: 30px;
-  font-weight: bold;
-  margin-top: 58px;
-}
-
-.hotels-sentence {
-  font-weight: normal;
-  margin-bottom: 48px;
-  line-height: 24px;
-}
-
-.search-hotel-button-wrapper {
-  position: relative;
-  margin: 50px auto auto;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 571px;
-  min-height: 84px;
-  background-color: #766357;
-}
-
-.search-hotel-button {
-  font-family: "PT Sans", Arial, sans-serif;
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
-  width: 100%;
-  text-transform: uppercase;
-  color: #ffffff;
-  border: 0 none;
-  background-color: #766357;
-  padding-top: 29px;
-  padding-bottom: 32px;
-  cursor: pointer;
-}
-
-.search-hotel-button:hover, .search-hotel-button:focus {
-  background-color: #604e43;
-  outline: none;
-}
-
-.search-hotel-button:active {
-  background-color: #503e33;
-  color: #857871;
-}
-
-.chose-date {
-  font: inherit;
-  text-transform: uppercase;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 345px;
-  min-height: 38px;
-  margin: 0;
-  padding: 0;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-left: 12px;
-  background-color: #f2f2f2;
-  border: 0 none;
-  outline: none;
-}
-
-.chose-date::-ms-clear {
-  display: none;
-  width: 0;
-  height: 0;
-}
-
-.chose-date::-ms-reveal {
-  display: none;
-  width: 0;
-  height: 0;
-}
-
-.chose-date:hover, .chose-number:hover {
-  background-color: #ebebeb;
-}
-
-.chose-date:focus, .chose-number:focus {
-  background-color: #ffffff;
-  -webkit-box-shadow: inset 0 0 0 2px #e5e5e5;
-  box-shadow: inset 0 0 0 2px #e5e5e5;
-  outline: 0;
-}
-
-.chose-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.calendar-icon {
-  position: absolute;
-  width: 21px;
-  height: 22px;
-  border: 0 none;
-  top: 7px;
-  bottom: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  padding-right: 10px;
-  background-color: transparent;
-  cursor: pointer;
-  fill: #cacaca;
-}
-
-.calendar-icon:hover {
-  fill: #000000;
-  outline: none;
-}
-
-.calendar-icon:active {
-  fill: #81b3d2;
-  outline: none;
-}
-
-.chose-wrapper:nth-child(1) {
-  margin-top: 55px;
-}
-
-.chose-wrapper:nth-child(2) {
-  margin-top: 29px;
-}
-
-.search-hotel-popup-wrapper {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  min-width: 571px;
-  display: none;
-  margin: 0 auto;
-  font-weight: 700;
-}
-
-.show {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  min-width: 571px;
-  display: block;
-  margin: 0 auto;
-  font-weight: 700;
-}
-
-.search-hotel-popup {
-  text-align: start;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-left: 55px;
-  padding-right: 55px;
-  background-color: #ffffff;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  z-index: 2;
-  -webkit-box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
-  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
-}
-
-.search-hotel-popup-wrapper.show {
-  -webkit-animation: popupshow 0.6s forwards;
-  animation: popupshow 0.6s forwards;
-  z-index: 2;
-}
-
-@-webkit-keyframes popupshow {
-  0% {
-    -webkit-transform: translateY(-90%);
-    transform: translateY(-90%);
-    opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  }
-}
-
-@keyframes popupshow {
-  0% {
-    -webkit-transform: translateY(-90%);
-    transform: translateY(-90%);
-    opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  }
-}
-
-.search-hotel-popup label {
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-  text-align: left;
-  line-height: 21px;
-  width: 115px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding-left: 3px;
-}
-
-.search-hotel-popup input {
-  font-weight: 700;
-}
-
-.chose-date-wrapper {
-  position: relative;
-}
-
-.plus {
-  border: 0 none;
-  width: 38px;
-  min-height: 38px;
-  position: relative;
-  background-color: #f2f2f2;
-  color: #a9a9a9;
-  cursor: pointer;
-}
-
-.plus::before, .minus::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -6px;
-  margin-top: -1px;
-  width: 11px;
-  height: 3px;
-  background-color: #a9a9a9;
-}
-
-.plus::after {
-  content: "";
-  position: absolute;
-  margin-left: -2px;
-  margin-top: -5px;
-  top: 50%;
-  left: 50%;
-  width: 3px;
-  height: 11px;
-  background-color: #a9a9a9;
-}
-
-.minus {
-  border: 0 none;
-  width: 38px;
-  min-height: 38px;
-  position: relative;
-  background-color: #f2f2f2;
-  color: #a9a9a9;
-  cursor: pointer;
-}
-
-.plus:hover, .minus:hover, .plus:focus, .minus:focus {
-  outline: none;
-}
-
-.plus:hover::after, .plus:hover::before, .minus:hover::before {
-  background-color: #000000;
-  outline: none;
-}
-
-.plus:active::after, .plus:active::before, .minus:active::before {
-  background-color: #81b3d2;
-}
-
-.chose-people-wrapper {
-  margin-top: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.chose-number-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-}
-
-.people {
-  padding-top: 14px;
-  padding-bottom: 14px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  border: 0 none;
-  background-color: #f2f2f2;
-  min-height: 38px;
-  width: 38px;
-}
-
-.search-button {
-  background-color: #81b3d2;
-  border: 0 none;
-  margin-top: 55px;
-  margin-bottom: 55px;
-  padding-top: 15px;
-  padding-bottom: 20px;
-  font-size: 21px;
-  line-height: 26px;
-  text-transform: uppercase;
-  color: #ffffff;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-.search-button:hover, .search-button:focus {
-  background-color: #669ec0;
-  outline: none;
-}
-
-.search-button:active {
-  background-color: #5496bd;
-  color: #88b6d1;
-}
-
-.chose-people-wrapper label:nth-of-type(2) {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: end;
-  text-align: right;
-  padding-right: 25px;
-}
-
 .map {
-  width: 1200px;
-  height: 593px;
+  width: 100%;
+  min-height: 593px;
   background: #7293b6 url(../img/map.jpg) no-repeat center center;
 }
 
-.map-iframe {
+/* .map-iframe {
   border: 0px;
   overflow: hidden;
   z-index: 2;
-}
+} */
 
 .main-footer {
   background-color: rgba(255, 255, 255, 0.5);
@@ -445,10 +104,6 @@ a {
   width: 150px;
   margin: 0 auto;
   padding: 0;
-}
-
-.visually-hidden {
-  display: none;
 }
 
 .social-button {
