--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import './normalize.css';
 @import './header.css';
-@import './main-page.css';
+@import './footer.css';
 body {
   font-family: Pt Sans, Arial, sans-serif;
   font-size: 14px;
@@ -52,122 +52,7 @@ h2 {
   z-index: 2;
 } */
 
-.main-footer {
-  background-color: rgba(255, 255, 255, 0.5);
-  z-index: 2;
-}
-
-.main-footer .container-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 37px 0;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.a-tag {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 240px;
-  text-align: center;
-  margin-left: 73px;
-  margin-right: 88px;
-}
-
-.hashtag {
-  font-size: 21px;
-  line-height: 26px;
-  color: #000000;
-}
-
-.social {
-  width: 400px;
-  text-align: center;
-}
-
-.footer-social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  list-style: none;
-  text-align: center;
-  width: 150px;
-  margin: 0 auto;
-  padding: 0;
-}
-
-.social-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 46px;
-  height: 48px;
-  background-color: #81b3d2;
-}
-
-.social-button:hover {
-  background-color: #669ec0;
-}
-
-.social-button:active {
-  background-color: #5496bd;
-}
-
-.social-button:active path {
-  fill: #88b6d1;
-}
-
-.footer-copyright {
-  width: 240px;
-  margin: 0;
-  margin-left: auto;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: center;
-  margin-right: 73px;
-  margin-left: 88px;
-}
-
-.footer-copyright span {
-  padding-right: 8px;
-  font-weight: normal;
-}
-
-.htmlacademy {
-  vertical-align: middle;
-  fill: #000000;
-}
-
-.htmlacademy:hover {
-  fill: #81b3d2;
-  outline: none;
-}
-
-.htmlacademy:active {
-  fill: #bdbbbc;
-}
-
 /* внутреняя страница */
-
-.header-nav-item .active {
-  color: #766357;
-}
 
 .inner-page {
   color: #000000;
