--- a/css/main-page/hotels.css
+++ b/css/main-page/hotels.css
@@ -45,21 +45,21 @@
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 1;
+  max-height: 500px;
   min-width: 571px;
   margin: 0 auto;
   font-weight: 700;
   transition: .8s all;
   opacity: 1;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
 }
 
 .hotels__popup.hide {
   opacity: 0;
-  -webkit-transform: translateY(-1000px);
-  transform: translateY(-1000px);
-  z-index: -10;
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  max-height: 0px;
 }
 
 .hotels__popup-form {
